# far-horizons-engine

./: .gitattributes  .gitignore  CMakeLists.txt  DATASTORE.md  ORDERS.md  README.md
engine/: make.sh
engine/src/: AddSpecies.c  AddSpeciesAuto.c  AsciiToBinary.c  Combat.c  Edit.c  Finish.c  HomeSystem.c  HomeSystemAuto.c  Jump.c  Locations.c  MakeHomes.c  Makefile  NoOrders.c  PostArrival.c  PreDeparture.c  Production.c  RenameShip.c  Report.c  ScanSpXYZ.c  Set.c  Stats.c  abend.c  combat_utils.c  combat_utils.h  con_ops.h  cons_op.c  dat2json.c  dat2sql.c  data.c  dis_ship.c  do_bat.c  do_bat.h  do_bomb.c  do_bomb.h  do_build.c  do_germ.c  do_germ.h  do_jump.c  do_locs.c  do_mes.c  (+66 more)
engine/tools/: fhutils.py  game_setup.py
